--- a/reservas/index.html
+++ b/reservas/index.html
@@ -8,6 +8,8 @@
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://quintadosavoslourenco.pt/reservas/">
   <meta name="referrer" content="strict-origin-when-cross-origin">
+
+  <!-- CSP igual ao site (permite Formspree) -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
     script-src 'self';
@@ -20,14 +22,16 @@
     upgrade-insecure-requests;
   ">
 
+  <!-- Open Graph -->
   <meta property="og:title" content="Reservas · Quinta dos Avós Lourenço">
   <meta property="og:description" content="Faça o seu pedido de reserva na Quinta dos Avós Lourenço, alojamento rural na Sertã.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://quintadosavoslourenco.pt/reservas/">
 
+  <!-- CSS principal do site -->
   <link rel="stylesheet" href="/css/style.css">
 
-  <!-- Estilos só do simulador -->
+  <!-- Estilos locais e discretos apenas para o simulador -->
   <style>
     .simulador{background:#fff;border:1px solid #e5e7eb;border-radius:14px;padding:16px;box-shadow:0 6px 16px rgba(0,0,0,.06);margin:24px 0}
     .sim-grid{display:grid;grid-template-columns:1fr 1fr;gap:12px}
@@ -44,7 +48,7 @@
     .consent-line{display:flex;align-items:flex-start;gap:8px}
     .consent-line input[type="checkbox"]{margin-top:2px}
 
-    /* Campos arredondados locais + fix iOS + letra maior */
+    /* Inputs arredondados e legíveis; mantém palete do site */
     #simulador-precos label{font-size:16px}
     .round-field{
       width:100%;padding:12px 14px;border:1px solid #e5e7eb;border-radius:16px;background:#fff;
@@ -54,7 +58,7 @@
     input[type="date"].round-field{height:52px}
     input[type="date"]::-webkit-date-and-time-value{text-align:left}
 
-    /* Spinners dentro da caixa */
+    /* Spinners ↑/↓ dentro da caixa (mobile & desktop) */
     .with-spinner{position:relative}
     .with-spinner .spinner{
       position:absolute; right:8px; top:6px; bottom:6px;
@@ -66,10 +70,25 @@
       display:flex; align-items:center; justify-content:center; cursor:pointer;
     }
     .with-spinner .spinner button:active{transform:translateY(1px)}
+
+    /* Erros visuais e mensagens por campo */
+    .round-field.field-error{ border-color:#991b1b!important; box-shadow:0 0 0 3px rgba(153,27,27,.15)!important; }
+    label.label-error{ color:#991b1b; }
+    .field-hint{ display:block; font-size:12px; margin-top:6px; color:#991b1b; }
+    .field-hint[hidden]{ display:none; }
+
+    /* Realce dos consentimentos quando faltarem */
+    .consent-line.label-error{
+      color:#991b1b;
+      box-shadow:0 0 0 3px rgba(153,27,27,.15);
+      border-radius:12px;
+      padding:6px;
+    }
   </style>
 </head>
 
 <body class="page-reservas">
+  <!-- Topo do site -->
   <header class="topbar">
     <div class="brand"><a href="/"><img src="/images/logo.png" alt="Quinta dos Avós Lourenço" class="logo"></a></div>
     <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
@@ -78,24 +97,29 @@
     </nav>
   </header>
 
+  <!-- Conteúdo -->
   <main class="section">
     <div class="container">
       <h1 style="text-align:center">Pedido de Reserva</h1>
       <p style="text-align:center">Use o simulador para verificar o valor estimado e enviar-nos o pedido.</p>
 
+      <!-- Simulador de preços -->
       <section id="simulador-precos" class="simulador" aria-labelledby="sim-title">
-        <h2 id="sim-title" style="margin-top:0">Reserve agora</h2>
+        <h2 id="sim-title" style="margin-top:0">Simulador de preços</h2>
 
         <div class="sim-grid">
           <div>
             <label for="checkin">Check-in</label>
             <input id="checkin" name="checkin" type="date" class="round-field">
+            <small id="err-checkin" class="field-hint" hidden></small>
           </div>
           <div>
             <label for="checkout">Check-out</label>
             <input id="checkout" name="checkout" type="date" class="round-field">
+            <small id="err-checkout" class="field-hint" hidden></small>
           </div>
 
+          <!-- Adultos com spinners (sem teclado no telemóvel) -->
           <div class="with-spinner">
             <label for="adultos">Adultos</label>
             <input id="adultos" name="adultos" type="number" min="1" max="7" value="2"
@@ -106,6 +130,7 @@
             </div>
           </div>
 
+          <!-- Crianças 0–4 com spinners (grátis; bloqueia se total 7) -->
           <div class="with-spinner">
             <label for="criancas">Crianças (0–4 anos)</label>
             <input id="criancas" name="criancas" type="number" min="0" max="6" value="0"
@@ -119,15 +144,19 @@
           <div>
             <label for="nome">Nome completo *</label>
             <input id="nome" name="nome" type="text" autocomplete="name" placeholder="Ex.: Maria Silva" class="round-field" required>
+            <small id="err-nome" class="field-hint" hidden></small>
           </div>
           <div>
             <label for="email">Email *</label>
             <input id="email" name="email" type="email" autocomplete="email" placeholder="exemplo@dominio.pt" class="round-field" required>
+            <small id="err-email" class="field-hint" hidden></small>
           </div>
           <div>
             <label for="telefone">Telefone *</label>
             <input id="telefone" name="telefone" type="tel" inputmode="tel" placeholder="+351 …" class="round-field" required>
+            <small id="err-telefone" class="field-hint" hidden></small>
           </div>
+
           <div>
             <label for="alojamento">Tipo de alojamento</label>
             <select id="alojamento" name="alojamento" class="round-field">
@@ -139,8 +168,8 @@
         <p class="note">
           Regras: <strong>137€ / noite</strong> inclui <strong>1–2 adultos</strong> (pequeno-almoço).
           Adultos extra: <strong>+35€ / adulto / noite</strong>. <strong>Crianças 0–4 anos: gratuito</strong>
-          (não acrescentam custo; >4 anos contam como adulto).
-          Mínimo <strong>2 noites</strong>, máximo <strong>30 noites</strong>, capacidade <strong>até 7 pessoas</strong> (adultos + crianças).
+          (não acrescentam custo; &gt;4 anos contam como adulto). Mínimo <strong>2 noites</strong>, máximo
+          <strong>30 noites</strong>, capacidade <strong>até 7 pessoas</strong> (adultos + crianças).
         </p>
 
         <div class="sim-kpi">
@@ -171,6 +200,9 @@
             <input id="consent-privacy" type="checkbox" required>
             <span>Li e aceito a <a href="/politica-privacidade/" target="_blank" rel="noopener">Política de Privacidade</a>.</span>
           </label>
+          <!-- aviso dos consentimentos -->
+          <small id="err-consents" class="field-hint" hidden></small>
+
           <button id="sim-reservar" type="button" class="btn primary">Reservar agora</button>
         </div>
       </section>
@@ -185,18 +217,22 @@
     </div>
   </main>
 
+  <!-- Rodapé -->
   <footer class="footer">
-    <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
+    <p>
+      © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
       <a href="/politica-privacidade/">Política de Privacidade</a> ·
       <a href="/termos-e-condicoes/">Termos e Condições</a> ·
       <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">Livro de Reclamações</a>
     </p>
   </footer>
 
-  <a href="https://wa.me/351960446713?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos Avós Lourenço." class="whatsapp-float" target="_blank" rel="noopener noreferrer" aria-label="Enviar mensagem no WhatsApp" title="Enviar mensagem no WhatsApp">
+  <!-- WhatsApp flutuante -->
+  <a href="https://wa.me/351960446713?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço." class="whatsapp-float" target="_blank" rel="noopener noreferrer" aria-label="Enviar mensagem no WhatsApp" title="Enviar mensagem no WhatsApp">
     <img src="/images/whatsapp-icon.svg" alt="WhatsApp">
   </a>
 
+  <!-- Cookies -->
   <div id="cookie-consent" class="cookie-banner" role="dialog" aria-live="polite" hidden>
     <div class="cookie-inner">
       <p class="cookie-text">Usamos cookies apenas para garantir o bom funcionamento do site. <a href="/cookies/">Saiba mais</a></p>
@@ -204,8 +240,10 @@
     </div>
   </div>
 
+  <!-- Scripts -->
   <script defer src="/js/cookies.js"></script>
   <script defer src="/js/app.js"></script>
+  <!-- o teu JS colado na pergunta deve estar neste caminho -->
   <script defer src="/js/reservas.js"></script>
 </body>
 </html>
