--- a/contactos/index.html
+++ b/contactos/index.html
@@ -46,7 +46,7 @@
   <!-- Cabeçalho -->
   <header class="topbar">
     <div class="brand">
-      <a href="/"><img src="/images/logo.png" alt="Quinta dos Avós Lourenço" class="logo"></a>
+      <a href="/"><img src="/images/logo.webp" alt="Quinta dos Avós Lourenço" class="logo"></a>
     </div>
     <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
     <nav class="menu" aria-label="Navegação principal">
