--- a/reservas/index.html
+++ b/reservas/index.html
@@ -9,28 +9,41 @@
   <link rel="canonical" href="https://quintadosavoslourenco.pt/reservas/">
   <meta name="referrer" content="strict-origin-when-cross-origin">
 
-  <!-- CSP igual ao site, com permissões para Formspree -->
+  <!-- CSS principal -->
+  <link rel="stylesheet" href="/css/style.css">
+
+  <!-- Favicons -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
+  <!-- (opcional) perf: preconnect para o GA -->
+  <link rel="preconnect" href="https://www.googletagmanager.com">
+  <link rel="preconnect" href="https://www.google-analytics.com">
+
+  <!-- CSP única (GA + Formspree permitidos) -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
-    script-src 'self';
+    script-src 'self' https://www.googletagmanager.com 'unsafe-inline';
     style-src  'self' 'unsafe-inline';
-    img-src    'self' data:;
+    img-src    'self' data: https://www.google-analytics.com;
     font-src   'self' data:;
-    connect-src 'self' https://formspree.io;
+    connect-src 'self' https://formspree.io https://www.google-analytics.com https://www.googletagmanager.com;
     base-uri   'self';
     form-action 'self' https://formspree.io;
     upgrade-insecure-requests;
   ">
 
-  <!-- OG básicos -->
-  <meta property="og:title" content="Reservas · Quinta dos Avós Lourenço">
-  <meta property="og:description" content="Faça o seu pedido de reserva na Quinta dos Avós Lourenço, alojamento rural na Sertã.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://quintadosavoslourenco.pt/reservas/">
-
-  <!-- CSS principal -->
-  <link rel="stylesheet" href="/css/style.css">
-
+  <!-- Google tag (gtag.js) - deve ficar no <head> -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JS7FTWGPQX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-JS7FTWGPQX');
+  </script>
+  
   <!-- Estilos apenas para o simulador (não mexem no resto do site) -->
   <style>
     .simulador{background:#fff;border:1px solid #e5e7eb;border-radius:14px;padding:16px;box-shadow:0 6px 16px rgba(0,0,0,.06);margin:24px 0}
