--- a/politica-privacidade/index.html
+++ b/politica-privacidade/index.html
@@ -32,7 +32,7 @@
   <header class="topbar">
     <div class="brand">
       <a href="/">
-        <img src="/images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
+        <img src="/images/logo.webp" alt="Quinta dos Avós Lourenço" class="logo">
       </a>
     </div>
     <nav class="menu" aria-label="Navegação principal">
