--- a/sobre/index.html
+++ b/sobre/index.html
@@ -67,7 +67,7 @@
     <p>
             Entre montanhas e colinas verdes do concelho da Sertã, no coração de Portugal, 
             ergue-se a <strong>Quinta dos Avós Lourenço</strong> — uma casa com mais de um século e meio de história. 
-            Foi o trisavô Agostinho quem, em 1853, lhe deu alma, passando-a de geração em geração até aos dias de hoje.
+            Foi o <strong>trisavô Agostinho</strong>strong> quem, em <strong>1853</strong>strong>, lhe deu alma, passando-a de geração em geração até aos dias de hoje.
         </p>
 
         <p>
