--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
   gtag('config', 'G-JS7FTWGPQX');
 </script>
+
+  <link rel="manifest" href="/manifest.json">
   
  <!-- ✅ Ícone da aba do navegador -->
   <!-- Favicons -->
