--- a/reservas/index.html
+++ b/reservas/index.html
@@ -196,7 +196,7 @@
       <h2 style="text-align:center">Outras formas de reservar</h2>
       <p style="text-align:center">
         <a href="https://www.airbnb.pt/rooms/875560493639889462" target="_blank" rel="noopener">Airbnb</a> ·
-        <a href="https://www.booking.com/hotel/pt/quinta-dos-avos-lourenço.pt-pt.html" target="_blank" rel="noopener">Booking</a> ·
+        <a href="https://www.booking.com/hotel/pt/quinta-dos-avos-lourenco.pt-pt.html" target="_blank" rel="noopener">Booking</a> ·
         <a href="https://wa.me/351960446713?text=Ol%C3%A1!%20Gostaria%20de%20saber%20disponibilidade." target="_blank" rel="noopener">WhatsApp</a>
       </p>
     </div>
