--- a/sobre/index.html
+++ b/sobre/index.html
@@ -61,7 +61,7 @@
 
   <!-- Conteúdo -->
   <main class="section">
-   <div class="container" style="max-width:800px; text-align:center;">
+   <div class="container" style="max-width:800px; text-align:justify;">
       <h1>Sobre a Quinta dos Avós Lourenço</h1>
 
     <p>
