--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <a href="https://www.airbnb.pt/rooms/875560493639889462"
            target="_blank" rel="noopener noreferrer"
            style="display:inline-block; padding:6px 10px; border:1px solid #eee; border-radius:999px; font-size:14px; color:#222;">
-          ⭐ 4,96/5 · +50 avaliações · Airbnb
+          ⭐ 4,96/5   +50 avaliações   Airbnb
         </a>
       </p>
 
@@ -112,7 +112,7 @@
         <a href="https://www.booking.com/hotel/pt/quinta-dos-avos-lourenco.pt-pt.html"
            target="_blank" rel="noopener noreferrer"
            style="display:inline-block; padding:6px 10px; border:1px solid #eee; border-radius:999px; font-size:14px; color:#222;">
-          ⭐ <span style="color:#003580;">9,8/10</span> · Booking.com
+          ⭐ 9,8/10   Booking.com
         </a>
       </p>
 
